Signup UI setup

--- a/Social Feed/Info.plist
+++ b/Social Feed/Info.plist
@@ -41,5 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Nexa Light.otf</string>
+		<string>Nexa Bold.otf</string>
+	</array>
 </dict>
 </plist>
